--- a/style.css
+++ b/style.css
@@ -4,13 +4,24 @@ body {
 
     font: 16px Arial, sans-serif;
 }
+
 html, body, #map {
     height: 100%;
     width: 100%;
     background: #9999FF;
 }
-h1, h2, h3, h4, h5 {
-  
+
+button {
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 2px;
+  background-color: #555555;
+  box-shadow: 0 1.5px 5px 1px rgba(0, 0, 0, 0.3);
 }
 
 /* Others */
@@ -144,7 +155,6 @@ input:checked + .slider:before {
   border-radius: 0px 5px 5px 0px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   overflow-y: scroll;
-  overflow-x: hidden;
   max-width: 0px;
   transition: max-width 0.5s;
 }
@@ -203,6 +213,7 @@ input:checked + .slider:before {
 #quiz-panel-button-close {
   font-size: 33px;
   float: right;
+  cursor: pointer;
 }
 
 /* Details */
@@ -214,15 +225,34 @@ input:checked + .slider:before {
   left: 0;
   right: 0;
   margin: 0 auto;
-  height: 100px;
   z-index: 998;
   background: #fff;
-  padding: 20px;
+  
   border-radius: 5px 5px 0px 0px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   overflow-y: scroll;
+  max-height: 0px;
+  transition: max-height 0.5s;
+}
+
+#details-content {
+  padding: 10px 20px 0px 20px;
+}
+
+#details-button-close {
+  font-size: 33px;
+  float: right;
+  cursor: pointer;
 }
 
 .details-heading {
   line-height: 0.1;
+}
+
+#details-country {
+  display: inline;
+}
+
+#details-add-country-button {
+  display: inline;
 }
