improved quiz evaluation experience

--- a/style.css
+++ b/style.css
@@ -216,6 +216,10 @@ input:checked + .slider:before {
   cursor: pointer;
 }
 
+#quiz-panel-question-evaluation {
+  display: none;
+}
+
 /* Details */
 
 #details {
