--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ input:checked + .slider:before {
   background: #fff;
   z-index: 1000;
   box-shadow: 0 8px 6px -6px rgba(0,0,0,0.5);
+  transition: height 0.3s;
 }
 
 #menu-button-open {
