improved quiz transitions

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 html, body, #map {
     height: 100%;
     width: 100%;
-    background: #9999FF;
+    background: #ffffff;
 }
 
 button {
@@ -289,4 +289,18 @@ input:checked + .slider:before {
 
 #details-add-country-button {
   display: inline;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    display: flex;
+    flex-flow: column;
+  }
+  
+  #quiz-panel {
+    position: relative;
+    min-width: 100%;
+    box-sizing: border-box;
+    border-radius: 0px 0px 0px 0px;
+  }
 }
