--- a/style.css
+++ b/style.css
@@ -186,6 +186,14 @@ input:checked + .slider:before {
   display: block;
 }
 
+#controls-info-country-indicators {
+  border:2px solid #ccc; width:300px; height: 100px; overflow-y: scroll;
+}
+
+#controls-info-country-indicators label {
+  display: block;
+}
+
 #quiz-setup-question-types {
   border:2px solid #ccc; width:300px; height: 100px; overflow-y: scroll;
 }
