--- a/style.css
+++ b/style.css
@@ -202,6 +202,14 @@ input:checked + .slider:before {
   display: block;
 }
 
+#quiz-setup-country-indicators {
+  border:2px solid #ccc; width:300px; height: 100px; overflow-y: scroll;
+}
+
+#quiz-setup-country-indicators label {
+  display: block;
+}
+
 /* Quiz Panel */
 
 #quiz-panel {
