--- a/style.css
+++ b/style.css
@@ -157,15 +157,15 @@ input:checked+.slider:before {
     position: absolute;
     top: 0px;
     left: 0px;
-    height: calc(100% - 22px);
     z-index: 1001;
     background: #fff;
     padding: 2px 0px 20px 0px;
     border-radius: 0px 5px 5px 0px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     overflow-y: scroll;
-    max-width: 0px;
-    transition: max-width 0.5s;
+    transition: width 0.5s;
+    width: 0px;
+    height: calc(100vh - 22px);
 }
 
 #menu-content {
@@ -180,7 +180,6 @@ input:checked+.slider:before {
 
 #controls-countries {
     border: 2px solid #ccc;
-    width: 300px;
     height: 200px;
     overflow-y: scroll;
 }
@@ -191,7 +190,6 @@ input:checked+.slider:before {
 
 #controls-info-types {
     border: 2px solid #ccc;
-    width: 300px;
     height: 200px;
     overflow-y: scroll;
 }
@@ -202,7 +200,6 @@ input:checked+.slider:before {
 
 #controls-info-country-indicators {
     border: 2px solid #ccc;
-    width: 300px;
     height: 300px;
     overflow-y: scroll;
 }
@@ -213,7 +210,6 @@ input:checked+.slider:before {
 
 #quiz-setup-question-types {
     border: 2px solid #ccc;
-    width: 300px;
     height: 200px;
     overflow-y: scroll;
 }
@@ -224,7 +220,6 @@ input:checked+.slider:before {
 
 #quiz-setup-country-indicators {
     border: 2px solid #ccc;
-    width: 300px;
     height: 300px;
     overflow-y: scroll;
 }
