--- a/style.css
+++ b/style.css
@@ -305,17 +305,21 @@ input:checked+.slider:before {
 }
 
 #details-content {
-    padding: 10px 20px 0px 20px;
+    padding: 20px 30px 0px 30px;
 }
 
 #details-button-close {
     font-size: 33px;
     float: right;
     cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 15px;
 }
 
 .details-heading {
-    line-height: 0.1;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 #details-country {
@@ -324,6 +328,11 @@ input:checked+.slider:before {
 
 #details-add-country-button {
     display: inline;
+}
+
+#details-states-list {
+    list-style-type: none;
+    padding: 0;
 }
 
 @media only screen and (max-width: 600px) {
