--- a/style.css
+++ b/style.css
@@ -308,8 +308,8 @@ input:checked+.slider:before {
     border-radius: 5px 5px 0px 0px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     overflow-y: scroll;
-    max-height: 0px;
-    transition: max-height 0.5s;
+    height: 0px;
+    transition: height 0.5s;
 }
 
 #details-content {
@@ -341,6 +341,7 @@ input:checked+.slider:before {
 #details-states-list {
     list-style-type: none;
     padding: 0;
+    transition: height 0.5s;
 }
 
 @media only screen and (max-width: 600px) {
