--- a/style.css
+++ b/style.css
@@ -202,6 +202,10 @@ input:checked+.slider:before {
     margin-left: 24.5px;
 }
 
+.controls-info-feature-collection-filter-label {
+    margin-left: 24.5px;
+}
+
 #controls-info-country-indicators {
     border: 2px solid #ccc;
     height: 300px;
